--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.5.1
-pandas==1.3.5
-base58==2.1.1
-matplotlib==3.5.1
-numpy==1.18.1
-tensorflow==2.8.0rc1
-scikit-learn==1.0.2
-plotly==5.5.0
+streamlit
+pandas
+base58
+matplotlib
+numpy
+tensorflow
+scikit-lear
+plotly
